# Stock_market_strategies

./: Check for branching.xlsx  Experiment.ipynb  MANIFEST.in  README.md  Stock_data_puller.ipynb  Untitled.ipynb  backtesting_using_backtesting.ipynb  data_fetcher.ipynb  manifest-in.txt  master_script.ipynb  project-setup.sh  project_setup.txt  pyproject.toml  setup-py.py  setup.py  strategies_master.ipynb  strategy_output_backtesting_input.ipynb
.ipynb_checkpoints/: strategies_master-checkpoint.ipynb
config/: full_universe_nse_bse.csv  strategy_config.yaml
data/config/: IPO-PastIssue-23-Aug-2024.csv  SME_EQUITY_L.csv
data/raw/: stock_data_raw.csv
others/: fetch_data_from_yfinance.ipynb
outputs/: strategies_occurrence.parquet
src/: Predictive model - weekly.ipynb  Untitled.ipynb  fetch_data_from_yfinance.ipynb  fetch_incremental_data.ipynb  finanacial_data_pull.ipynb  ipo_break_out.ipynb  stock_list.ipynb
src/.ipynb_checkpoints/: ipo_break_out-checkpoint.ipynb  util_data_cleaner-checkpoint.ipynb
src/data_cleaner/.ipynb_checkpoints/: util_data_cleaner-checkpoint.ipynb
stock_market_strategies/: Experiment.ipynb  backtesting.py  basic_analysis.py  data_reader.py  generate_sample_data.py  main.py  run_process.py  strategies.py  utils.py
strategy results/: ipo_bo_23_aug_2024.csv
